 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
 - Made "New browser window" inherit the panel style of its parent.
 - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
 - Added a redraw(DAMAGE_HIGHLIGHT) call to Back, Forw and Stop buttons.
 - Fixed a segfault bug when closing a bw under active networking.
   Patches: Johannes Hofmann
+- Made progress bars resize automatically.
   Patches: Johannes Hofmann, Jorge Arellano Cid
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts
+- Bound Ctrl-R to reload.
 - Made dialogs use font_factor (e.g. view source).
 - Implemented the SELECT element in FORMS!
   Patches: Jeremy Henty
+- Added int32_t, EAI_NODATA and iconv tests for FreeBSD.
   Patch: Thomas-Martin Seck

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.
   Patches: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-2 [Aug 28, 2004]
 - * Added images to the current state of the redesign.
     - New module Imgbuf, see doc/Imgbuf.txt for details.
   Patch: Sebastian Geerken

        
dillo-0.8.3-pre-dw-redesign-1 [Aug 25, 2004]
 - * Introduced an abstraction layer between Dw and Gtk+. See README-port and
     doc/DwRender.txt for more details.
   Patch: Sebastian Geerken


=============================================================================
Dillo project
=============================================================================


dillo-0.8.6 [Apr 26, 2006]

 - * Designed and implemented a dpi protocol library (libDpip.a in /dpip).
   * Added a couple of new dpip commands.
   * Fixed and uniformed the escaping of values inside dpip tags.